--- a/style.css
+++ b/style.css
@@ -1,99 +1,136 @@
-@import url('httpsfonts.googleapis.comcss2family=Work+Sanswght@200&display=swap');
-
 * {
-margin: 0;
-padding: 0;
-border: 0;
-box-sizing: border-box;
-font-size Work Sans;
-}
-
-body{
-padding 0;
-margin 0;
-background-color #363636;
-}
-
-h2 {
-    text-align center;
-    padding-bottom 30px;
-}
-
-#cc {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+    font-size: Work Sans;
+    }
     
-display flex;
-align-items center;
-justify-content center;
-height 75vh;
-font-family Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-.card {
-background-color white;
-padding 35px;
-border-radius 3px;
-width330px;
-}
-
- #password, #email {
-    background-color #4F4F4F;
-    border-radius 30px;
-    width 250px;
-    height 47px;
-    padding 0 0.6rem;
-    color white;
-    font-size 1rem;
-    border 2px solid black;
-    display flex;
-    flex-direction column; 
-    align-items center; 
-    margin-top 1rem; 
- } 
-
- #contaG {
-    background-color #DB4A39;
-    border-radius 30px;
-    width 250px;
-    height 47px;
-    cursor pointer;
-    font-weight bold; 
- }
-
- #contaF {
-    background-color #90ee90;
-    border-radius 30px;
-    width 250px;
-    height 47px;
-    cursor pointer;
-    font-weight bold;
-}
-
-#button {
-    flex-direction column;
-    align-items center;
-    display flex;
-    text-align center;
-    cursor pointer;
-    width 20%;
-    height 20px;
-    background-color #808080;
-    border-radius 30px;
-    border 1px solid black;
-}
-
-.registra {
-    text-align center;
-    font-family 'Times New Roman', Times, serif;
-}
-
-h1 {
-    text-align center;
-    font-size 80px;
-    color white;
-    margin 50px 0 0 0;
-    font-family Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.recuperar_senha {
-    text-align center;
-}
+    body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    background-image: url("ifrj.png");
+    background-repeat: no-repeat; 
+    background-size: cover;
+    
+    /* background-color: #363636; */
+    }
+    
+    h2 {
+        text-align: center;
+        padding-bottom: 30px;
+    }
+    
+    .card-header {
+        height: 50px;
+        border-style: none;
+        border-bottom: solid 1px;
+        width: 100%;
+    }
+    
+    #cc {
+        
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+    
+    .card {
+    background-color: white;
+    padding: 35px;
+    border-radius: 3px;
+    width:330px;
+    }
+    
+     #password, #email {
+        background-color: #4F4F4F;
+        border-radius: 30px;
+        width: 250px;
+        height: 47px;
+        padding: 0 0.6rem;
+        color: white;
+        font-size: 1rem;
+        border: 2px solid black;
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+        margin-top: 1rem; 
+     } 
+    
+     .contas {
+        border: 2px solid black;
+     }
+    
+     #contaG {
+        background-color: #DB4A39;
+        border-radius: 30px;
+        width: 250px;
+        height: 47px;
+        cursor: pointer;
+        font-weight: bold; 
+     }
+    
+     #contaG:hover {
+        background-color: #b12414;
+     }
+    
+     #contaF {
+        background-color: #3B5998;
+        border-radius: 30px;
+        width: 250px;
+        height: 47px;
+        cursor: pointer;
+        font-weight: bold;
+    }
+    
+    #contaF:hover {
+        background-color: #193e8e;
+    }
+    
+    #button {
+        flex-direction: column;
+        align-items: center;
+        display: flex;
+        text-align: center;
+        cursor: pointer;
+        width: 20%;
+        height: 20px;
+        background-color: #808080;
+        border-radius: 30px;
+        border: 1px solid black;
+    }
+    
+    .registra {
+        text-align: center;
+        color: black;
+    }
+    
+    h1 {
+        margin-top: 20px;
+        margin-bottom: 0px;
+        text-align: center;
+        font-size: 80px;
+        color: white;
+        margin: 50px 0 0 0;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    
+    .enviar {
+        cursor: pointer;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: bold;
+        background-color: #90ee90;
+        height: 20px;
+        align-items: center;
+        width: 80px;
+        border: 2px solid black;
+        border-radius: 30px;
+        
+    }
+    
