--- a/style.css
+++ b/style.css
@@ -10,15 +10,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
     padding: 0;
     margin: 0;
-    background-image: url("ifrj.png");
-    background-repeat: no-repeat; 
-    background-size: cover;
+    background-image: linear-gradient(90deg, rgb(0, 0, 0), rgb(133, 133, 133));
     
     /* background-color: #363636; */
     }
     
+    h1 {
+        font-weight: bold;
+    }
     h2 {
         text-align: center;
         padding-bottom: 30px;
@@ -36,7 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 65vh;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
     
@@ -109,6 +111,7 @@
         text-align: center;
         color: black;
     }
+
     
     h1 {
         margin-top: 20px;
