--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ h2 {
     flex-direction: column; 
     align-items: center; 
     margin-top: 1rem; 
-     } 
+} 
 
     
 #button {
@@ -123,4 +123,7 @@ h2 {
     border: 2px solid black;
     border-radius: 30px;       
 }
-    
+
+.enviar:hover {
+    box-shadow: 0 0 1em black;
+}
