--- a/htdocs/main.css
+++ b/htdocs/main.css
@@ -12,12 +12,6 @@
 
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
-.zmdi zmdi-eye{
-  position: absolute;
-    top: 5px;
-    right: 10px;
-    cursor: pointer;
-}
 
 * {
 	margin: 0px; 
@@ -27,11 +21,12 @@
 
 body, html {
 	height: 100%;
-	font-family: 'Ubuntu', sans-serif !important;
+	font-family: Poppins-Regular, sans-serif;
 }
 
 /*---------------------------------------------*/
 a {
+	font-family: Poppins-Regular;
 	font-size: 14px;
 	line-height: 1.7;
 	color: #666666;
@@ -61,6 +56,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
+	font-family: Poppins-Regular;
 	font-size: 14px;
 	line-height: 1.7;
 	color: #666666;
@@ -127,13 +123,15 @@ iframe {
 /*//////////////////////////////////////////////////////////////////
 [ Utility ]*/
 .txt1 {
-  font-size: 16px;
+  font-family: Poppins-Regular;
+  font-size: 13px;
   color: #666666;
   line-height: 1.5;
 }
 
 .txt2 {
-  font-size: 16px;
+  font-family: Poppins-Regular;
+  font-size: 13px;
   color: #333333;
   line-height: 1.5;
 }
@@ -185,6 +183,7 @@ iframe {
 
 .login100-form-title {
   display: block;
+  font-family: Poppins-Bold;
   font-size: 30px;
   color: #333333;
   line-height: 1.2;
@@ -205,6 +204,7 @@ iframe {
 }
 
 .input100 {
+  font-family: Poppins-Regular;
   font-size: 15px;
   color: #555555;
   line-height: 1.2;
@@ -249,6 +249,7 @@ iframe {
 }
 
 .focus-input100::after {
+  font-family: Poppins-Regular;
   font-size: 15px;
   color: #999999;
   line-height: 1.2;
@@ -367,6 +368,7 @@ iframe {
 }
 
 .login100-form-btn {
+  font-family: Poppins-Medium;
   font-size: 15px;
   color: #fff;
   line-height: 1.2;
@@ -424,6 +426,7 @@ iframe {
   right: 0px;
   pointer-events: none;
 
+  font-family: Poppins-Regular;
   color: #c80000;
   font-size: 13px;
   line-height: 1.4;
@@ -440,6 +443,7 @@ iframe {
 
 .alert-validate::after {
   content: "\f06a";
+  font-family: FontAwesome;
   font-size: 16px;
   color: #c80000;
 
